Mess of changes that seems to work